...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Iniciar sesión en gGym" id="BYZ-38-t0r" userLabel="gGym Login" customClass="LoginViewController" customModule="gGym" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Email" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JJE-c9-891">
                                <rect key="frame" x="70" y="398.66666666666669" width="274" height="25"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="username"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KUh-TQ-3Dl">
                                <rect key="frame" x="70" y="443.66666666666669" width="274" height="25"/>
                                <constraints>
...
                                <rect key="frame" x="150.66666666666666" y="488.66666666666669" width="112.99999999999997" height="35.000000000000057"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Iniciar Sesión"/>
                                <connections>
                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UQS-Ug-LCW"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="538.33333333333337"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre (*)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZI5-kn-yAq">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
        <scene sceneID="vb4-Jl-abu">
            <objects>
                <tableViewController title="Menú" id="97u-0L-VJe" userLabel="Main Menu Scene" customClass="MainMenuViewController" customModule="gGym" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ksx-Sn-jfh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                                    </state>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="di6-to-YB7" userLabel="Equipamiento">
                                                    <rect key="frame" x="232" y="20" width="162" height="42"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
...
                                </cells>
                            </tableViewSection>
                            <tableViewSection id="QeV-7J-Jhq" userLabel="Abonados, pagos">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="9PL-UQ-0ZX">
...
                                                    </connections>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqt-6v-gZq" userLabel="Pagos">
                                                    <rect key="frame" x="232" y="20" width="162" height="46"/>
                                                    <constraints>
...
                                                    <rect key="frame" x="20" y="20" width="155" height="41"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                    <state key="normal" title="Cerrar Sesión" image="cerrarsesion">
                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
        <scene sceneID="avh-5d-V2c">
            <objects>
                <tableViewController title="Listado de Abonados" id="eTB-AK-qKK" userLabel="Clients List Scene" customClass="ClientsListControllers" customModule="gGym" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" id="Rwo-KM-zAX">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                            <segments>
                                <segment title="Cobrados"/>
                                <segment title="Pendientes de cobro"/>
                            </segments>
                            <connections>
...
        <scene sceneID="HmX-ik-asY">
            <objects>
                <viewController title="Detalles del Abono" id="6r5-06-xZb" customClass="PaymentDetailsViewController" customModule="gGym" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="09X-2t-bUD"/>
...
                                        <rect key="frame" x="0.0" y="347" width="394" height="35"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="Guardar"/>
                                        <connections>
                                            <action selector="saveButtonTapped:" destination="6r5-06-xZb" eventType="touchUpInside" id="cEW-Wh-Aed"/>
...
        <scene sceneID="X9P-X1-gBB">
            <objects>
                <tableViewController title="Lista de Equipamiento" id="ZjJ-qP-Zma" customClass="EquipmentListViewController" customModule="gGym" customModuleProvider="target" sceneMemberID="viewController">
